<resources>
    <string name="app_name">DataBinding Teams</string>
    <string name="initial_valor">0</string>
    <string name="equipo_a">Equipo A</string>
    <string name="equipo_b">Equipo B</string>
    <string name="_3_puntos">+3 puntos</string>
    <string name="_2_puntos">+2 puntos</string>
    <string name="_1_punto">+1 punto</string>
    <string name="reset_text">limpiar</string>
</resources>
