<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="puntos"
            type="com.genesis.databindingteams.Equipos"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/equipo_a"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_score_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:gravity="center"
                    android:text="@{puntos.puntosEquipoA}"
                    android:textSize="@dimen/big_text_size" />


                <Button
                    android:id="@+id/bt_team_a_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:onClick="addThreeA"
                    android:text="@string/_3_puntos" />

                <Button
                    android:id="@+id/bt_team_a_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:onClick="addTwoA"
                    android:text="@string/_2_puntos" />

                <Button
                    android:id="@+id/bt_team_a_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:onClick="addOneA"
                    android:text="@string/_1_punto" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/equipo_b"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_score_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:gravity="center"
                    android:text="@{puntos.puntosEquipoB}"
                    android:textSize="@dimen/big_text_size" />

                <Button
                    android:id="@+id/bt_team_b_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:onClick="addOneB"
                    android:text="@string/_3_puntos" />

                <Button
                    android:id="@+id/bt_team_b_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:onClick="addTwoB"
                    android:text="@string/_2_puntos" />

                <Button
                    android:id="@+id/bt_team_b_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:onClick="addThreeB"
                    android:text="@string/_1_punto" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/bt_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:onClick="reset"
            android:text="@string/reset_text" />

    </LinearLayout>
</layout>